// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackEdit /> should render empty content pack for create 1`] = `
<div>
  <div
    className="content row"
  >
    <div
      className="subnavigation col-md-2"
    >
      <ul
        className="Nav-dzawzr-0 dfydXw nav nav-pills nav-stacked"
        role={null}
      >
        <li
          className="active"
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            Content Selection
          </a>
        </li>
        <li
          className="disabled"
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "pointerEvents": "none",
              }
            }
            tabIndex={-1}
          >
            Parameters
          </a>
        </li>
        <li
          className="disabled"
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "pointerEvents": "none",
              }
            }
            tabIndex={-1}
          >
            Preview
          </a>
        </li>
      </ul>
      <br />
      <div
        className="row"
      >
        <div
          className="col-xs-6"
        >
          <button
            className="Button-c9cbmb-0 GLfOY btn btn-sm btn-info"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Previous
          </button>
        </div>
        <div
          className="text-right col-xs-6"
        >
          <button
            className="Button-c9cbmb-0 GLfOY btn btn-sm btn-info"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
    <div
      className="col-md-7"
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col-lg-8 col-sm-offset-1"
          >
            <h2>
              General Information
            </h2>
            <br />
            <form
              className="content-selection-form"
              id="content-selection-form"
              onSubmit={[Function]}
            >
              <fieldset>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <span>
                    <input
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="name"
                      label="Name"
                      maxLength={250}
                      name="name"
                      onChange={[Function]}
                      placeholder=""
                      required={true}
                      type="text"
                      value=""
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Required. Give a descriptive name for this content pack.
                    </span>
                  </span>
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="summary"
                  >
                    Summary
                  </label>
                  <span>
                    <input
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="summary"
                      label="Summary"
                      maxLength={250}
                      name="summary"
                      onChange={[Function]}
                      placeholder=""
                      required={true}
                      type="text"
                      value=""
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Required. Give a short summary of the content pack.
                    </span>
                  </span>
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="description"
                  >
                    Description
                  </label>
                  <span>
                    <textarea
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="description"
                      label="Description"
                      name="description"
                      onChange={[Function]}
                      placeholder=""
                      rows={6}
                      type="textarea"
                      value=""
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Give a long description of the content pack in markdown.
                    </span>
                  </span>
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="vendor"
                  >
                    Vendor
                  </label>
                  <span>
                    <input
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="vendor"
                      label="Vendor"
                      maxLength={250}
                      name="vendor"
                      onChange={[Function]}
                      placeholder=""
                      required={true}
                      type="text"
                      value=""
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Required. Who did this content pack and how can he be reached. e.g Name and eMail
                    </span>
                  </span>
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="url"
                  >
                    URL
                  </label>
                  <span>
                    <input
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="url"
                      label="URL"
                      maxLength={250}
                      name="url"
                      onChange={[Function]}
                      placeholder=""
                      type="text"
                      value=""
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Where can I find the content pack. e.g. github url
                    </span>
                  </span>
                </div>
              </fieldset>
            </form>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-lg-8 col-sm-offset-1"
          >
            <h2>
              Content Pack selection
            </h2>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-lg-8 col-sm-offset-1"
          >
            <div
              className="search"
              style={
                Object {
                  "marginTop": 15,
                }
              }
            >
              <form
                className="form-inline"
                onSubmit={[Function]}
              >
                <div
                  className="form-group has-feedback"
                >
                  <input
                    autoComplete="off"
                    className="query form-control"
                    id="common-search-form-query-input"
                    onChange={[Function]}
                    placeholder="Enter search query..."
                    spellCheck="false"
                    style={
                      Object {
                        "width": "auto",
                      }
                    }
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                  style={
                    Object {
                      "marginLeft": 5,
                    }
                  }
                >
                  <button
                    className="submit-button Button-c9cbmb-0 GLfOY btn btn-default"
                    disabled={false}
                    type="submit"
                  >
                    Filter
                  </button>
                </div>
                <div
                  className="form-group"
                  style={
                    Object {
                      "marginLeft": 5,
                    }
                  }
                >
                  <button
                    className="reset-button Button-c9cbmb-0 GLfOY btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    type="reset"
                  >
                    Reset
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-lg-8 col-sm-8 col-sm-offset-1"
          >
            <ul
              className="list"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div>
        <div>
          <div
            className="row"
          >
            <div
              className="col-sm-9 col-sm-offset-1"
            >
              <div
                id="content-pack-details"
              >
                <h2>
                  Details
                </h2>
                <br />
                <div>
                  <dl
                    className="deflist"
                  >
                    <dt>
                      Version:
                    </dt>
                     
                    <dd>
                      1
                    </dd>
                    <dt>
                      Name:
                    </dt>
                     
                    <dd>
                      
                       
                    </dd>
                    <dt>
                      Summary:
                    </dt>
                     
                    <dd>
                      
                       
                    </dd>
                    <dt>
                      Vendor:
                    </dt>
                     
                    <dd>
                      
                       
                    </dd>
                    <dt>
                      URL:
                    </dt>
                     
                    <dd>
                      <a
                        href=""
                      >
                        
                      </a>
                       
                    </dd>
                    <span>
                      <dt>
                        ID:
                      </dt>
                       
                      <dd>
                        <code>
                          9950ba5a-0887-40a9-2b8f-8b50292cc7fb
                        </code>
                      </dd>
                    </span>
                    <span>
                      <dt>
                        Parameters:
                      </dt>
                       
                      <dd>
                        0
                      </dd>
                    </span>
                    <span>
                      <dt>
                        Entities:
                      </dt>
                       
                      <dd>
                        0
                      </dd>
                    </span>
                  </dl>
                </div>
                
                <br />
                <br />
                <br />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span />
</div>
`;

exports[`<ContentPackEdit /> should render spinner with no content pack 1`] = `
<span>
  <i
    className="fa fa-spinner fa-spin"
  />
   
  Loading...
</span>
`;

exports[`<ContentPackEdit /> should render with content pack for edit 1`] = `
<div>
  <div
    className="content row"
  >
    <div
      className="subnavigation col-md-2"
    >
      <ul
        className="Nav-dzawzr-0 dfydXw nav nav-pills nav-stacked"
        role={null}
      >
        <li
          className="active"
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            Content Selection
          </a>
        </li>
        <li
          className=""
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            Parameters
          </a>
        </li>
        <li
          className="disabled"
          role="presentation"
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            style={
              Object {
                "pointerEvents": "none",
              }
            }
            tabIndex={-1}
          >
            Preview
          </a>
        </li>
      </ul>
      <br />
      <div
        className="row"
      >
        <div
          className="col-xs-6"
        >
          <button
            className="Button-c9cbmb-0 GLfOY btn btn-sm btn-info"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Previous
          </button>
        </div>
        <div
          className="text-right col-xs-6"
        >
          <button
            className="Button-c9cbmb-0 GLfOY btn btn-sm btn-info"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
    <div
      className="col-md-7"
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col-lg-8 col-sm-offset-1"
          >
            <h2>
              General Information
            </h2>
            <br />
            <form
              className="content-selection-form"
              id="content-selection-form"
              onSubmit={[Function]}
            >
              <fieldset>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <span>
                    <input
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="name"
                      label="Name"
                      maxLength={250}
                      name="name"
                      onChange={[Function]}
                      placeholder=""
                      required={true}
                      type="text"
                      value="Content Pack the movie"
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Required. Give a descriptive name for this content pack.
                    </span>
                  </span>
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="summary"
                  >
                    Summary
                  </label>
                  <span>
                    <input
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="summary"
                      label="Summary"
                      maxLength={250}
                      name="summary"
                      onChange={[Function]}
                      placeholder=""
                      required={true}
                      type="text"
                      value="A old content pack"
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Required. Give a short summary of the content pack.
                    </span>
                  </span>
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="description"
                  >
                    Description
                  </label>
                  <span>
                    <textarea
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="description"
                      label="Description"
                      name="description"
                      onChange={[Function]}
                      placeholder=""
                      rows={6}
                      type="textarea"
                      value="## No one dares"
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Give a long description of the content pack in markdown.
                    </span>
                  </span>
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="vendor"
                  >
                    Vendor
                  </label>
                  <span>
                    <input
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="vendor"
                      label="Vendor"
                      maxLength={250}
                      name="vendor"
                      onChange={[Function]}
                      placeholder=""
                      required={true}
                      type="text"
                      value="Beinstein"
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Required. Who did this content pack and how can he be reached. e.g Name and eMail
                    </span>
                  </span>
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                    htmlFor="url"
                  >
                    URL
                  </label>
                  <span>
                    <input
                      className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                      id="url"
                      label="URL"
                      maxLength={250}
                      name="url"
                      onChange={[Function]}
                      placeholder=""
                      type="text"
                      value="http://beinstein.com"
                    />
                    <span
                      className="HelpBlock-i8is92-0 huFHQV help-block"
                    >
                      Where can I find the content pack. e.g. github url
                    </span>
                  </span>
                </div>
              </fieldset>
            </form>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-lg-8 col-sm-offset-1"
          >
            <h2>
              Content Pack selection
            </h2>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-lg-8 col-sm-offset-1"
          >
            <div
              className="search"
              style={
                Object {
                  "marginTop": 15,
                }
              }
            >
              <form
                className="form-inline"
                onSubmit={[Function]}
              >
                <div
                  className="form-group has-feedback"
                >
                  <input
                    autoComplete="off"
                    className="query form-control"
                    id="common-search-form-query-input"
                    onChange={[Function]}
                    placeholder="Enter search query..."
                    spellCheck="false"
                    style={
                      Object {
                        "width": "auto",
                      }
                    }
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                  style={
                    Object {
                      "marginLeft": 5,
                    }
                  }
                >
                  <button
                    className="submit-button Button-c9cbmb-0 GLfOY btn btn-default"
                    disabled={false}
                    type="submit"
                  >
                    Filter
                  </button>
                </div>
                <div
                  className="form-group"
                  style={
                    Object {
                      "marginLeft": 5,
                    }
                  }
                >
                  <button
                    className="reset-button Button-c9cbmb-0 GLfOY btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    type="reset"
                  >
                    Reset
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-lg-8 col-sm-8 col-sm-offset-1"
          >
            <ul
              className="list"
            >
              <li
                className=""
              >
                <div
                  className="listItemContainer"
                >
                  <label
                    className="checkbox-inline"
                    title=""
                  >
                    <input
                      checked={true}
                      disabled={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </label>
                  <div
                    className="expandBoxContainer"
                  >
                    <div
                      className="fa-stack expandBox"
                      onClick={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <i
                        className="fa fa-circle-thin fa-stack-1x iconBackground"
                      />
                      <i
                        className="fa fa-angle-up fa-stack-1x"
                      />
                    </div>
                  </div>
                  <span
                    className="header"
                  >
                    <span
                      onClick={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      Dashboard
                    </span>
                  </span>
                </div>
                <div
                  className="expandableContent"
                />
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div>
        <div>
          <div
            className="row"
          >
            <div
              className="col-sm-9 col-sm-offset-1"
            >
              <div
                id="content-pack-details"
              >
                <h2>
                  Details
                </h2>
                <br />
                <div>
                  <dl
                    className="deflist"
                  >
                    <dt>
                      Version:
                    </dt>
                     
                    <dd>
                      1
                    </dd>
                    <dt>
                      Name:
                    </dt>
                     
                    <dd>
                      Content Pack the movie
                       
                    </dd>
                    <dt>
                      Summary:
                    </dt>
                     
                    <dd>
                      A old content pack
                       
                    </dd>
                    <dt>
                      Vendor:
                    </dt>
                     
                    <dd>
                      Beinstein
                       
                    </dd>
                    <dt>
                      URL:
                    </dt>
                     
                    <dd>
                      <a
                        href="http://beinstein.com"
                      >
                        http://beinstein.com
                      </a>
                       
                    </dd>
                    <span>
                      <dt>
                        ID:
                      </dt>
                       
                      <dd>
                        <code>
                          9950ba5a-0887-40a9-2b8f-8b50292cc7fb
                        </code>
                      </dd>
                    </span>
                    <span>
                      <dt>
                        Parameters:
                      </dt>
                       
                      <dd>
                        1
                      </dd>
                    </span>
                    <span>
                      <dt>
                        Entities:
                      </dt>
                       
                      <dd>
                        1
                      </dd>
                    </span>
                  </dl>
                </div>
                <div>
                  <h2>
                    Description
                  </h2>
                  <br />
                  <div
                    className="Well-sc-19gs1oc-0 kezSPd well"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<h2>No one dares</h2>",
                        }
                      }
                    />
                  </div>
                </div>
                <br />
                <br />
                <br />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span />
</div>
`;
